# sos-stata

./: .travis.yml  README.md  pyproject.toml  setup.py
src/sos_stata/: _version.py  kernel.py
