[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sos-stata"
version = "0.18.1"
description = "SoS Notebook extension for Stata"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "3-clause BSD"}
authors = [
    {name = "Bo Peng", email = "Bo.Peng@bcm.edu"},
]
maintainers = [
    {name = "Bo Peng", email = "Bo.Peng@bcm.edu"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "sos>=0.18.0",
    "sos-notebook>=0.18.0",
]

[project.urls]
Homepage = "https://github.com/vatlab/SOS"
Repository = "https://github.com/vatlab/sos-stata"
"Bug Tracker" = "https://github.com/vatlab/sos-stata/issues"

[project.entry-points."sos_languages"]
"Stata" = "sos_stata.kernel:sos_Stata"

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.js", "*.tpl", "*.png", "*.css", "*.j2", "*.json"]
